--- a/client/src/App.css
+++ b/client/src/App.css
@@ -93,3 +93,14 @@ ul button {
 	height: 400px;
 
 }
+
+.chat-text {
+	background: none;
+	border: solid green 1px;
+	margin-right: 15px;
+	width: 15rem;
+	height: 30px;
+	margin-top: 15px;
+	margin-bottom: 15px;
+
+}
